--- a/short.html
+++ b/short.html
@@ -1,1 +1,15 @@
-
+<html>
+  <body>
+    <script>function makeid(length) {
+      var result           = [];
+      var characters       = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+      var charactersLength = characters.length;
+      for ( var i = 0; i < length; i++ ) {result.push(characters.charAt(Math.floor(Math.random() * charactersLength)));}
+      return result.join('');}
+      
+      var x = makeid(7)
+      document.write("<p>" + x + "</p>");
+      console.log(x);
+    </script>
+  </body>
+</html>
